<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayoutMainScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".mainActivity.MainActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarMainScreen"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.SearchView
                android:id="@+id/searchViewMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:queryHint="@string/search_recipe_hint"
                app:layout_constraintTop_toBottomOf="@+id/toolbarMainScreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:id="@+id/newsButton"
                android:text="@string/newsButton"
                android:textColor="@color/white"
                android:background="@drawable/solid_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/searchViewMainScreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/rateButton"/>

        <Button
                android:id="@+id/rateButton"
                android:text="@string/rateButton"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/stroke_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                app:layout_constraintTop_toTopOf="@+id/newsButton"
                app:layout_constraintStart_toEndOf="@+id/newsButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/publicButton"/>
        <Button
                android:id="@+id/publicButton"
                android:text="@string/globalButton"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/stroke_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                app:layout_constraintTop_toTopOf="@+id/rateButton"
                app:layout_constraintStart_toEndOf="@+id/rateButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayoutMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cards_background_color"
                app:layout_constraintTop_toBottomOf="@+id/newsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp">

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/RecyclerViewMainScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadeScrollbars="true"/>
        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavigationViewMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:itemBackground="@color/colorPrimaryDark"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                app:menu="@menu/bottom_app_bar_menu"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/addRecipeFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:srcCompat="@android:drawable/ic_input_add"
                android:tint="@android:color/white"
                app:backgroundTint="@color/colorPrimaryDark"
                android:scaleType="center"
                app:layout_anchor="@id/bottomNavigationViewMainScreen"
                app:layout_anchorGravity="top|center_horizontal"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/bottomNavigationViewMainScreen"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/navigationViewMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_header"/>

</android.support.v4.widget.DrawerLayout>