<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayoutMainScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".mainScreen.mainUser.MainUserActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMainScreen"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@android:color/white"
                android:background="@color/colorPrimaryDark">
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.SearchView
                android:id="@+id/searchViewMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:queryHint="@string/search_recipe_hint"
                android:layout_below="@+id/toolbarMainScreen"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/searchViewMainScreen"
                android:id="@+id/constraintLayout">

            <Button
                    android:id="@+id/newsButton"
                    android:text="@string/newsButton"
                    android:textColor="@color/white"
                    android:background="@drawable/solid_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/button_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/rateButton" app:layout_constraintTop_toTopOf="parent"/>

            <Button
                    android:id="@+id/rateButton"
                    android:text="@string/rateButton"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/stroke_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/button_padding"
                    app:layout_constraintTop_toTopOf="@+id/newsButton"
                    app:layout_constraintStart_toEndOf="@+id/newsButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/publicButton"/>
            <Button
                    android:id="@+id/publicButton"
                    android:text="@string/globalButton"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/stroke_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/button_padding"
                    app:layout_constraintTop_toTopOf="@+id/rateButton"
                    app:layout_constraintStart_toEndOf="@+id/rateButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayoutMainScreen"
                android:background="@color/cards_background_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/constraintLayout"
                android:layout_above="@+id/bottomNavigationViewMainScreen">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewMainScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationViewMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:itemBackground="@color/colorPrimaryDark"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                app:menu="@menu/bottom_app_bar_menu"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addRecipeFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:srcCompat="@android:drawable/ic_input_add"
                android:tint="@android:color/white"
                app:backgroundTint="@color/colorPrimaryDark"
                android:scaleType="center"
                app:layout_anchor="@id/bottomNavigationViewMainScreen"
                app:layout_anchorGravity="top|center_horizontal"
                android:layout_margin="20dp"
                android:layout_above="@+id/bottomNavigationViewMainScreen"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

          <FrameLayout
                  android:id="@+id/fragmentContent"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationViewMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_header"/>

</androidx.drawerlayout.widget.DrawerLayout>