<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayoutGuestMainScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".mainScreen.mainGuest.MainGuestActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarGuestMainScreen"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@android:color/white"
                android:background="@color/colorPrimaryDark">
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.SearchView
                android:id="@+id/searchGuestViewMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:queryHint="@string/search_recipe_hint"
                android:layout_below="@+id/toolbarGuestMainScreen"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/searchGuestViewMainScreen">

            <Button
                    android:id="@+id/newsGuestButton"
                    android:text="@string/newsButton"
                    android:textColor="@color/white"
                    android:background="@drawable/solid_button"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/button_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/rateGuestButton" app:layout_constraintTop_toTopOf="parent"/>

            <Button
                    android:id="@+id/rateGuestButton"
                    android:text="@string/rateButton"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/stroke_button"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/button_padding"
                    app:layout_constraintTop_toTopOf="@+id/newsGuestButton"
                    app:layout_constraintStart_toEndOf="@+id/newsGuestButton"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayoutGuestMainScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cards_background_color"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/constraintLayout"
                android:layout_above="@+id/bottomNavigationViewGuestMainScreen">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewGuestMainScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationViewGuestMainScreen"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:itemBackground="@color/colorPrimaryDark"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                app:menu="@menu/guest_bottom_app_bar"
                app:labelVisibilityMode="labeled"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationViewGuestMainScreen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_guest_header"/>

</androidx.drawerlayout.widget.DrawerLayout>